Fixed text overflow in MoviePoster

--- a/src/styles/MoviePoster.less
+++ b/src/styles/MoviePoster.less
@@ -11,9 +11,12 @@
     margin: 13px;
   }
   &__name {
-    font-size: 20px;
-    color: @white-text;
-    width: 200px;
+    font-size: 19px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: white;
+    width: 205px;
     margin: 0;
   }
   &__genre {
